create github pages

--- a/page11.html
+++ b/page11.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Website Maker Description">
-  <title>2016-2017 Vrij werk</title>
+  <title>2016-2017 Free work</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
@@ -23,9 +23,23 @@
   
 </head>
 <body>
-<section id="ext_menu-1t" data-rv-view="110">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111189697-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111189697-2');
+</script>
+<!-- /Google Analytics -->
+
+
+<section id="ext_menu-1t" data-rv-view="119">
+
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
@@ -36,7 +50,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">HOME</a></li><li class="nav-item"><a class="nav-link link" href="page2.html" aria-expanded="false">2014-2015</a></li><li class="nav-item"><a class="nav-link link" href="page3.html" aria-expanded="false">2015-2016</a></li><li class="nav-item dropdown open"><a class="nav-link link" href="page4.html" aria-expanded="false">2016-2017</a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">2017-2018</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">HOME</a></li><li class="nav-item"><a class="nav-link link" href="page2.html" aria-expanded="false">2014-2015</a></li><li class="nav-item"><a class="nav-link link" href="page3.html" aria-expanded="false">2015-2016</a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">2017-2018</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">2016-2017</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -49,7 +63,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-1s" data-rv-view="108" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-1s" data-rv-view="117" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>Copyright (c) 2016 Mobirise.</p>
