--- a/page6.html
+++ b/page6.html
@@ -23,9 +23,23 @@
   
 </head>
 <body>
-<section id="ext_menu-1e" data-rv-view="90">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111189697-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111189697-2');
+</script>
+<!-- /Google Analytics -->
+
+
+<section id="ext_menu-1e" data-rv-view="99">
+
+    <nav class="navbar navbar-dropdown">
         <div class="container">
 
             <div class="mbr-table">
@@ -36,7 +50,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">HOME</a></li><li class="nav-item"><a class="nav-link link" href="page2.html" aria-expanded="false">2014-2015</a></li><li class="nav-item"><a class="nav-link link" href="page3.html" aria-expanded="false">2015-2016</a></li><li class="nav-item dropdown open"><a class="nav-link link" href="page4.html" aria-expanded="false">2016-2017</a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">2017-2018</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">HOME</a></li><li class="nav-item"><a class="nav-link link" href="page2.html" aria-expanded="false">2014-2015</a></li><li class="nav-item"><a class="nav-link link" href="page3.html" aria-expanded="false">2015-2016</a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false">2017-2018</a></li><li class="nav-item dropdown"><a class="nav-link link" href="page4.html" aria-expanded="false">2016-2017</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -49,7 +63,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">design a website</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-1d" data-rv-view="88" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.co/g">how to create a website</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-after-navbar" id="footer1-1d" data-rv-view="97" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>Copyright (c) 2016 Mobirise.</p>
