create github pages

--- a/page12.html
+++ b/page12.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Website Builder Description">
-  <title>2017-2018 Paintings</title>
+  <title>2017-2018 Schilderijen</title>
   <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-1y" data-rv-view="5735">
+<section id="ext_menu-1y" data-rv-view="6554">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -52,7 +52,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">2014-2015</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html" aria-expanded="false">INTRO</a><a class="dropdown-item" href="page6.html" aria-expanded="false">GIP</a><a class="dropdown-item" href="page7.html" aria-expanded="false">Sculptures</a><a class="dropdown-item" href="page16.html" aria-expanded="false">Drawings</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">2015-2016</a><div class="dropdown-menu"><a class="dropdown-item" href="page3.html" aria-expanded="false">INTRO</a><a class="dropdown-item" href="page16.html" aria-expanded="false">Drawings</a><a class="dropdown-item" href="page9.html" aria-expanded="false">Graphics</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">2016-2017</a><div class="dropdown-menu"><a class="dropdown-item" href="page4.html" aria-expanded="false">INTRO</a><a class="dropdown-item" href="page10.html" aria-expanded="false">Fear</a><a class="dropdown-item" href="page11.html" aria-expanded="false">Drawings</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">2017-2018</a><div class="dropdown-menu"><a class="dropdown-item" href="page5.html" aria-expanded="false">INTRO</a><a class="dropdown-item" href="page12.html" aria-expanded="false">Paintings</a><a class="dropdown-item" href="page13.html" aria-expanded="false">Sketches &amp; drawings</a><a class="dropdown-item" href="page14.html" aria-expanded="false">Independent pictures</a><a class="dropdown-item" href="page15.html" aria-expanded="false">Pictures as inspiration</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false">English</a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false">Contact</a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">HOME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">2014-2015</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html" aria-expanded="false">INTRO</a><a class="dropdown-item" href="page6.html" aria-expanded="false">GIP</a><a class="dropdown-item" href="page7.html" aria-expanded="false">Sculpturen</a><a class="dropdown-item" href="page16.html" aria-expanded="false">Tekeningen</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">2015-2016</a><div class="dropdown-menu"><a class="dropdown-item" href="page3.html" aria-expanded="false">INTRO</a><a class="dropdown-item" href="page16.html" aria-expanded="false">Schetsen</a><a class="dropdown-item" href="page9.html" aria-expanded="false">Grafiek</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">2016-2017</a><div class="dropdown-menu"><a class="dropdown-item" href="page4.html" aria-expanded="false">INTRO</a><a class="dropdown-item" href="page10.html" aria-expanded="false">Angst</a><a class="dropdown-item" href="page11.html" aria-expanded="false">Tekeningen</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html" aria-expanded="false" data-toggle="dropdown-submenu">2017-2018</a><div class="dropdown-menu"><a class="dropdown-item" href="page5.html" aria-expanded="false">INTRO</a><a class="dropdown-item" href="page12.html" aria-expanded="false">Schilderijen</a><a class="dropdown-item" href="page13.html" aria-expanded="false">Schetsen en tekeningen</a><a class="dropdown-item" href="page14.html" aria-expanded="false">Onafhankelijke foto's</a><a class="dropdown-item" href="page15.html" aria-expanded="false">Foto's als inspiratiebron</a></div></li><li class="nav-item"><a class="nav-link link" href="https://emmab17.github.io/en/" aria-expanded="false">English</a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false">Contact</a></li><li class="nav-item"><a class="nav-link link" href="index.html" aria-expanded="false"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">HOME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -65,17 +65,17 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">web maker</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content2-46" data-rv-view="5737" style="background-color: rgb(6, 6, 6); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/a">web site builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content2-46" data-rv-view="6556" style="background-color: rgb(6, 6, 6); padding-top: 100px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote>Since January, Emma started painting with water mixtable oilpaint. First as tests, and after finding out how fluently this paint follows the moves of the brush, she didn't stop making small paintings. Still under supervise of professors, they recommended her to start painting on a taller format. That unfortunately didn't become her type of working. On the other side, Emma Boeyaert slowly started discovering how tiny choices through the painting proces could introduce an emotion or bizarre feeling while looking at the image. Though this proces only started, Emma continues working this way.&nbsp;</blockquote></div>
+            <div class="col-xs-12 lead"><blockquote>Sinds januari 2018 schildert Emma Boeyaert met watervermengbare olieverf. Eerst als testjes en na het ontdekken hoe vlot deze verf penseelbewegingen volgt, is ze niet opgehouden met het maken van kleine schilderijen. Onder begeleiding van haar docenten werd haar aangeraden om op groter formaat te werken. Dat bleek helaas niet binnen haar werkwijze te passen. Anderzijds ontdekte Emma op die manier hoe kleine keuzes doorheen het schilderproces een opening vormden voor een bizarre emotie voor wie naar het beeld kijkt. Dit proces is pas begonnen, maar Emma gaat hier voorlopig mee door.&nbsp;</blockquote></div>
         </div>
     </div>
 
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery3-47" data-rv-view="5739" style="background-color: rgb(6, 6, 6); padding-top: 1.5rem; padding-bottom: 1.5rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery3-47" data-rv-view="6558" style="background-color: rgb(6, 6, 6); padding-top: 1.5rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -373,7 +373,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1x" data-rv-view="5733" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1x" data-rv-view="6552" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>Copyright (c) Emma Boeyaert</p>
