create github pages

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-j" data-rv-view="7880">
+<section id="ext_menu-j" data-rv-view="9634">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -63,7 +63,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header5-7" data-rv-view="7877" style="background-image: url(assets/images/-dsc4584-2000x1328.jpg);">
+<section class="engine"><a href="https://mobirise.co/e">web creation software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header5-7" data-rv-view="9631" style="background-image: url(assets/images/-dsc4584-2000x1328.jpg);">
 
     
 
@@ -85,7 +85,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2" data-rv-view="7875" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2" data-rv-view="9629" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>Copyright (c) Emma Boeyaert</p>
