--- a/page10.html
+++ b/page10.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-1r" data-rv-view="8071">
+<section id="ext_menu-1r" data-rv-view="9773">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make a website</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content2-3n" data-rv-view="8073" style="background-color: rgb(6, 6, 6); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/e">website design software</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content2-3n" data-rv-view="9775" style="background-color: rgb(28, 30, 35); padding-top: 100px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery3-3w" data-rv-view="8075" style="background-color: rgb(6, 6, 6); padding-top: 1.5rem; padding-bottom: 1.5rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery3-3w" data-rv-view="9777" style="background-color: rgb(6, 6, 6); padding-top: 1.5rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -217,7 +217,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1q" data-rv-view="8069" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1q" data-rv-view="9771" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>Copyright (c) Emma Boeyaert</p>
