--- a/page15.html
+++ b/page15.html
@@ -37,7 +37,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-2k" data-rv-view="8445">
+<section id="ext_menu-2k" data-rv-view="10147">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -63,14 +63,14 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom mbr-after-navbar" id="image1-4o" data-rv-view="8447">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom mbr-after-navbar" id="image1-4o" data-rv-view="10149">
     <div class="mbr-figure">
         <div><img src="assets/images/-dsc4667-1400x929.jpg"></div>
         
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2j" data-rv-view="8443" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2j" data-rv-view="10145" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>Copyright (c) Emma Boeyaert</p>
