--- a/page12.html
+++ b/page12.html
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-<section id="ext_menu-1y" data-rv-view="8172">
+<section id="ext_menu-1y" data-rv-view="9874">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -65,7 +65,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create a website</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content2-46" data-rv-view="8174" style="background-color: rgb(6, 6, 6); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/j">design your own website</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content2-46" data-rv-view="9876" style="background-color: rgb(28, 30, 35); padding-top: 100px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery3-47" data-rv-view="8176" style="background-color: rgb(6, 6, 6); padding-top: 1.5rem; padding-bottom: 1.5rem;">
+<section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" data-filter="false" id="gallery3-47" data-rv-view="9878" style="background-color: rgb(6, 6, 6); padding-top: 1.5rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -373,7 +373,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1x" data-rv-view="8170" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1x" data-rv-view="9872" style="background-color: rgb(14, 14, 14); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>Copyright (c) Emma Boeyaert</p>
